src/function/ConvertMetadataToObject/action_then.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */

"use strict";

function peg$subclass(child, parent) {
  function ctor() { this.constructor = child; }
  ctor.prototype = parent.prototype;
  child.prototype = new ctor();
}

function peg$SyntaxError(message, expected, found, location) {
  this.message  = message;
  this.expected = expected;
  this.found    = found;
  this.location = location;
  this.name     = "SyntaxError";

  if (typeof Error.captureStackTrace === "function") {
    Error.captureStackTrace(this, peg$SyntaxError);
  }
}

peg$subclass(peg$SyntaxError, Error);

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
        literal: function(expectation) {
          return "\"" + literalEscape(expectation.text) + "\"";
        },

        "class": function(expectation) {
          var escapedParts = "",
              i;

          for (i = 0; i < expectation.parts.length; i++) {
            escapedParts += expectation.parts[i] instanceof Array
              ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
              : classEscape(expectation.parts[i]);
          }

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        },

        any: function(expectation) {
          return "any character";
        },

        end: function(expectation) {
          return "end of input";
        },

        other: function(expectation) {
          return expectation.description;
        }
      };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/"/g,  '\\"')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/\]/g, '\\]')
      .replace(/\^/g, '\\^')
      .replace(/-/g,  '\\-')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = new Array(expected.length),
        i, j;

    for (i = 0; i < expected.length; i++) {
      descriptions[i] = describeExpectation(expected[i]);
    }

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== void 0 ? options : {};

  var peg$FAILED = {},

      peg$startRuleFunctions = { start: peg$parsestart },
      peg$startRuleFunction  = peg$parsestart,

      peg$c0 = "=",
      peg$c1 = peg$literalExpectation("=", false),
      peg$c2 = function(v, value) { return {type: "variable_assignment", variable: v, value: value}; },
      peg$c3 = "(",
      peg$c4 = peg$literalExpectation("(", false),
      peg$c5 = ")",
      peg$c6 = peg$literalExpectation(")", false),
      peg$c7 = ".",
      peg$c8 = peg$literalExpectation(".", false),
      peg$c9 = ",",
      peg$c10 = peg$literalExpectation(",", false),
      peg$c11 = function(arg1, arg2) { return {type: "meta_function", functionName:"SetString", attributeName: arg1, value1: arg2}; },
      peg$c12 = function(arg1, arg2) { return {type: "meta_function", functionName:"SetNumber", attributeName: arg1, value1: arg2}; },
      peg$c13 = function(arg1, arg2) { return {type: "meta_function", functionName:"SetBoolean", attributeName: arg1, value1: arg2}; },
      peg$c14 = function(arg1, arg2) { return {type: "meta_function", functionName:"SetFloat", attributeName: arg1, value1: arg2}; },
      peg$c15 = function(arg1, arg2, arg3) { return {type: "meta_function", functionName:"TransferNumber", attributeName: arg1, value1: arg2, value2: arg3}; },
      peg$c16 = function(arg1, arg2) { return {type: "meta_function", functionName:"SetDisplayAttribute", attributeName: arg1, value1: arg2}; },
      peg$c17 = function(arg1) { return {type: "meta_function", functionName:"SetImage", attributeName: arg1}; },
      peg$c18 = function(arg1) { return {type: "meta_function", functionName:"SetTokenURI", attributeName: arg1}; },
      peg$c19 = function(left, oper, right) { return {type: "number_compare_oper", value: oper.slice(1,-1)[0], left: left, right: right}; },
      peg$c20 = function(left, oper, right) { return {type: "boolean_compare_oper", value: oper.slice(1,-1)[0], left: left, right: right}; },
      peg$c21 = function(left, oper, right) { return {type: "string_compare_oper", value: oper.slice(1,-1)[0], left: left, right: right}; },
      peg$c22 = function(left, oper, right) { return {type: "float_compare_oper", value: oper.slice(1,-1)[0], left: left, right: right}; },
      peg$c23 = /^[a-zA-Z_]/,
      peg$c24 = peg$classExpectation([["a", "z"], ["A", "Z"], "_"], false, false),
      peg$c25 = /^[a-zA-Z_0-9]/,
      peg$c26 = peg$classExpectation([["a", "z"], ["A", "Z"], "_", ["0", "9"]], false, false),
      peg$c27 = function() { return {type:'variable', name: text()}; },
      peg$c28 = "+",
      peg$c29 = peg$literalExpectation("+", false),
      peg$c30 = "-",
      peg$c31 = peg$literalExpectation("-", false),
      peg$c32 = function(left, oper, right) { return {type: "math_operation", value: oper.slice(1,-1)[0], left: left, right: right}; },
      peg$c33 = function() { return {type: "string_e", value: string_e}; },
      peg$c34 = "'",
      peg$c35 = peg$literalExpectation("'", false),
      peg$c36 = function() { return {type:'constant',dataType:'string' ,value :text().slice(1, -1)}; },
      peg$c37 = /^[a-zA-Z0-9_\-.:?!@#$%\^&*_+\\\/<> ]/,
      peg$c38 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], "_", "-", ".", ":", "?", "!", "@", "#", "$", "%", "^", "&", "*", "_", "+", "\\", "/", "<", ">", " "], false, false),
      peg$c39 = function() { return {type:'constant', dataType:'string', value: text().slice(1, -1)}; },
      peg$c40 = function(oper, value) { return {type: "variable", name: value.name, negative: oper==='-'? true:false}; },
      peg$c41 = "*",
      peg$c42 = peg$literalExpectation("*", false),
      peg$c43 = "/",
      peg$c44 = peg$literalExpectation("/", false),
      peg$c45 = function() { return {type: "number_e", value: number_e}; },
      peg$c46 = /^[0-9]/,
      peg$c47 = peg$classExpectation([["0", "9"]], false, false),
      peg$c48 = function() { return {type:'constant',dataType:'number' ,value :parseInt(text(),10)}; },
      peg$c49 = function() { return {type: "float_e", value: float_e}; },
      peg$c50 = function() { return {type:'constant',dataType:'float' ,value :parseFloat(text())}; },
      peg$c51 = "Max",
      peg$c52 = peg$literalExpectation("Max", false),
      peg$c53 = function(value1, value2) { return {type: "utility_function", functionName: "max", value1: value1, value2: value2}; },
      peg$c54 = "Min",
      peg$c55 = peg$literalExpectation("Min", false),
      peg$c56 = function(value1, value2) { return {type: "utility_function", functionName: "min", value1: value1, value2: value2}; },
      peg$c57 = "Abs",
      peg$c58 = peg$literalExpectation("Abs", false),
      peg$c59 = function(value1) { return {type: "utility_function", functionName: "abs", value1: value1}; },
      peg$c60 = "true",
      peg$c61 = peg$literalExpectation("true", false),
      peg$c62 = function() { return { type:'constant',dataType: 'bool', value : true}; },
      peg$c63 = "false",
      peg$c64 = peg$literalExpectation("false", false),
      peg$c65 = function() { return { type:'constant',dataType: 'bool', value : false}; },
      peg$c66 = function(arg1) { return {type:"meta_function", functionName: "GetNumber", attributeName: arg1}; },
      peg$c67 = "!",
      peg$c68 = peg$literalExpectation("!", false),
      peg$c69 = function(not, arg1) {return {type: "meta_function", functionName:"GetBoolean", attributeName: arg1, negative: not==='!'? true:false }; },
      peg$c70 = function(arg1) { return {type: "meta_function", functionName:"GetString", attributeName: arg1}; },
      peg$c71 = function(arg1) { return {type: "meta_function", functionName:"GetFloat", attributeName: arg1}; },
      peg$c72 = "()",
      peg$c73 = peg$literalExpectation("()", false),
      peg$c74 = function() { return {type: "meta_function", functionName:"GetImage"}; },
      peg$c75 = function() { return {type: "meta_function", functionName:"GetBaseURI"}; },
      peg$c76 = function() { return {type: "meta_function", functionName:"GetTokenURI"}; },
      peg$c77 = function() { return {type: "meta_function", functionName:"GetBlockHeight"}; },
      peg$c78 = function(arg1) { return {type: "meta_function", functionName:"GetUTCBlockTimestamp", attributeName: arg1}; },
      peg$c79 = function(arg1, arg2) { return {type: "meta_function", functionName:"GetBlockTimestampByZone", attributeName: arg1, value1: arg2}; },
      peg$c80 = function(arg1, arg2) { return {type: "meta_function", functionName:"BlockTimeUTCBefore", attributeName: arg1, value1: arg2}; },
      peg$c81 = function(arg1, arg2) { return {type: "meta_function", functionName:"BlockTimeUTCAfter", attributeName: arg1, value1: arg2}; },
      peg$c82 = function(arg1, arg2) { return {type: "meta_function", functionName:"BlockTimeBeforeByZone", attributeName: arg1, value1: arg2, value2: arg3}; },
      peg$c83 = function(arg1, arg2) { return {type: "meta_function", functionName:"BlockTimeAfterByZone", attributeName: arg1, value1: arg2, value2: arg3}; },
      peg$c84 = function(arg1, arg2, arg3) { return {type: "meta_function", functionName:"ReplaceAllString", attributeName: arg1, value1: arg2, value2: arg3}; },
      peg$c85 = "params[",
      peg$c86 = peg$literalExpectation("params[", false),
      peg$c87 = "]",
      peg$c88 = peg$literalExpectation("]", false),
      peg$c89 = function(arg1) { return {type: "param_function", functionName:"GetString", attributeName: arg1}; },
      peg$c90 = function(arg1) { return {type: "param_function", functionName:"GetNumber", attributeName: arg1}; },
      peg$c91 = "meta",
      peg$c92 = peg$literalExpectation("meta", false),
      peg$c93 = function() { return 'meta'; },
      peg$c94 = "GetNumber",
      peg$c95 = peg$literalExpectation("GetNumber", false),
      peg$c96 = function() { return 'GetNumber'; },
      peg$c97 = "GetBoolean",
      peg$c98 = peg$literalExpectation("GetBoolean", false),
      peg$c99 = function() { return 'GetBoolean'; },
      peg$c100 = "GetString",
      peg$c101 = peg$literalExpectation("GetString", false),
      peg$c102 = function() { return 'GetString'; },
      peg$c103 = "GetFloat",
      peg$c104 = peg$literalExpectation("GetFloat", false),
      peg$c105 = function() { return 'GetFloat'; },
      peg$c106 = "GetImage",
      peg$c107 = peg$literalExpectation("GetImage", false),
      peg$c108 = function() { return 'GetImage'; },
      peg$c109 = "GetBaseURI",
      peg$c110 = peg$literalExpectation("GetBaseURI", false),
      peg$c111 = function() { return 'GetBaseURI'; },
      peg$c112 = "GetTokenURI",
      peg$c113 = peg$literalExpectation("GetTokenURI", false),
      peg$c114 = function() { return 'GetTokenURI'; },
      peg$c115 = "GetBlockHeight",
      peg$c116 = peg$literalExpectation("GetBlockHeight", false),
      peg$c117 = function() { return 'GetBlockHeight'; },
      peg$c118 = "GetUTCBlockTimestamp",
      peg$c119 = peg$literalExpectation("GetUTCBlockTimestamp", false),
      peg$c120 = function() { return 'GetUTCBlockTimestamp'; },
      peg$c121 = "GetBlockTimestampByZone",
      peg$c122 = peg$literalExpectation("GetBlockTimestampByZone", false),
      peg$c123 = function() { return 'GetBlockTimestampByZone'; },
      peg$c124 = "BlockTimeUTCBefore",
      peg$c125 = peg$literalExpectation("BlockTimeUTCBefore", false),
      peg$c126 = function() { return 'BlockTimeUTCBefore'; },
      peg$c127 = "BlockTimeUTCAfter",
      peg$c128 = peg$literalExpectation("BlockTimeUTCAfter", false),
      peg$c129 = function() { return 'BlockTimeUTCAfter'; },
      peg$c130 = "BlockTimeBeforeByZone",
      peg$c131 = peg$literalExpectation("BlockTimeBeforeByZone", false),
      peg$c132 = function() { return 'BlockTimeBeforeByZone'; },
      peg$c133 = "BlockTimeAfterByZone",
      peg$c134 = peg$literalExpectation("BlockTimeAfterByZone", false),
      peg$c135 = function() { return 'BlockTimeAfterByZone'; },
      peg$c136 = "SetNumber",
      peg$c137 = peg$literalExpectation("SetNumber", false),
      peg$c138 = "SetBoolean",
      peg$c139 = peg$literalExpectation("SetBoolean", false),
      peg$c140 = "SetString",
      peg$c141 = peg$literalExpectation("SetString", false),
      peg$c142 = "SetFloat",
      peg$c143 = peg$literalExpectation("SetFloat", false),
      peg$c144 = "SetImage",
      peg$c145 = peg$literalExpectation("SetImage", false),
      peg$c146 = function() { return 'SetImage'; },
      peg$c147 = "SetBaseURI",
      peg$c148 = peg$literalExpectation("SetBaseURI", false),
      peg$c149 = function() { return 'SetBaseURI'; },
      peg$c150 = "SetTokenURI",
      peg$c151 = peg$literalExpectation("SetTokenURI", false),
      peg$c152 = function() { return 'SetTokenURI'; },
      peg$c153 = "SetDisplayAttribute",
      peg$c154 = peg$literalExpectation("SetDisplayAttribute", false),
      peg$c155 = function() { return 'SetDisplayAttribute'; },
      peg$c156 = "TransferNumber",
      peg$c157 = peg$literalExpectation("TransferNumber", false),
      peg$c158 = function() { return 'TransferNumber'; },
      peg$c159 = "ReplaceAllString",
      peg$c160 = peg$literalExpectation("ReplaceAllString", false),
      peg$c161 = function() { return 'ReplaceAllString'; },
      peg$c162 = "&&",
      peg$c163 = peg$literalExpectation("&&", false),
      peg$c164 = function() { return '&&'; },
      peg$c165 = "||",
      peg$c166 = peg$literalExpectation("||", false),
      peg$c167 = function() { return '||'; },
      peg$c168 = "<",
      peg$c169 = peg$literalExpectation("<", false),
      peg$c170 = function() { return '<'; },
      peg$c171 = ">",
      peg$c172 = peg$literalExpectation(">", false),
      peg$c173 = function() { return '>'; },
      peg$c174 = "<=",
      peg$c175 = peg$literalExpectation("<=", false),
      peg$c176 = function() { return '<='; },
      peg$c177 = ">=",
      peg$c178 = peg$literalExpectation(">=", false),
      peg$c179 = function() { return '>='; },
      peg$c180 = "==",
      peg$c181 = peg$literalExpectation("==", false),
      peg$c182 = function() { return '=='; },
      peg$c183 = "!=",
      peg$c184 = peg$literalExpectation("!=", false),
      peg$c185 = function() { return '!='; },
      peg$c186 = function() { return '+'; },
      peg$c187 = function() { return '-'; },
      peg$c188 = function() { return '*'; },
      peg$c189 = function() { return '/'; },
      peg$c190 = "%",
      peg$c191 = peg$literalExpectation("%", false),
      peg$c192 = function() { return '%'; },
      peg$c193 = peg$otherExpectation("whitespace"),
      peg$c194 = /^[ \t\n\r]/,
      peg$c195 = peg$classExpectation([" ", "\t", "\n", "\r"], false, false),

      peg$currPos          = 0,
      peg$savedPos         = 0,
      peg$posDetailsCache  = [{ line: 1, column: 1 }],
      peg$maxFailPos       = 0,
      peg$maxFailExpected  = [],
      peg$silentFails      = 0,

      peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos], p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line:   details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;
      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos),
        endPosDetails   = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line:   startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line:   endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parsestart() {
    var s0;

    s0 = peg$parseexpression();

    return s0;
  }

  function peg$parseexpression() {
    var s0;

    s0 = peg$parseset_value();
    if (s0 === peg$FAILED) {
      s0 = peg$parsevariable_assignment();
    }

    return s0;
  }

  function peg$parsevariable_assignment() {
    var s0, s1, s2, s3, s4, s5;
